# docopt-parser

./: .alias  .local  Changelog  README.rst  SYMLINKS  TODO  docopt.peg  docopt_parser.py  general.py  parser.py  s  scenarios.py  setup.cfg  setup.py  several.py  simple.py  single.py  tasks.py  test_grammar.py
canonical/: short.py
canonical/operand/: 001.py
canonical/short/: 000.py  001.py
docopt_parser/: 1.py  2.py  3.py  4.py  __init__.py  boundedre.py  core.py  create-validation.py  docopt.peg  generate.py  listview.py  p.py  parsetreenodes.py  pass1.py  pass2.py  pass3.py  pretty.py  scratch.py  simplify.py  tst.py  wrap.py
examples/usage/arguments/: doc.txt  parse.txt
examples/usage/calculator/: parse.txt
examples/usage/counted/: doc.txt  parse.txt
examples/usage/exportlib/: parse.txt
examples/usage/interactive/: doc.txt  parse.txt
examples/usage/my-program-1/: parse.txt
examples/usage/my-program-2/: doc.txt  parse.txt
grammar/option/: section.peg  short.peg
grammar/peg/: docopt.peg
grammar/python/: command.py  common.py  driver.py  operand.py  optdesclist.py  optdesclist_1.py  option.py  text.py  usage.py
ref/: docopc.bnf  mini.peg  overhaul.txt
ref/usage/: exportlib
t/: common.py  direct-wrap.py  import.py  newline.py  nonterminal_eq.py  operand.py  option.py  option_short.py  p.py  paragraph.py  run-test.py  sequence-types.py  text.py  text_line.py  wrap.py
t/grammar/: p
tests/: p.py  run-test.py  scenarios.py  test_common.py  test_import.py  test_nonterminal_eq.py  test_operand.py  test_text.py  test_wrap.py
(+91 files in other folders)
