[aliases]
test = pytest

[tool:pytest]
# '-s' disables STDOUT capture, so it goes direct to normal STDOUT
# This can be useful when debugging.
# addopts = -s tests/
addopts = tests/

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
ignore = D203
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
max-complexity = 10
